fixed homepage adverts height on mobile and removed rate from datepicker

--- a/src/styles/components/offers-list.less
+++ b/src/styles/components/offers-list.less
@@ -176,6 +176,22 @@ rewards-list {
       padding-bottom: 16px;
       margin: 0 0 @baseline;
 
+      &.advert {
+        height: auto;
+        position: relative;
+        border: none;
+
+        img {
+          display: block;
+          position: relative;
+          top: -1px;
+          min-width: 100%;
+          min-height: 100%;
+          max-height: none;
+          height: auto;
+        }
+      }
+
     }
 
   }
